--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -1,8 +1,8 @@
 {
-    "esversion": 6,
-    "asi": true,
-    "laxcomma": true,
-    "es5": true,
-    "node": true,
-    "strict": false
+    "esversion": 6
+    // "asi": true,
+    // "laxcomma": true,
+    // "es5": true,
+    // "node": true,
+    // "strict": false
 }
